hphp/test/zend/good/tests/classes/this.php.expectf

Fatal error: Cannot re-assign $this in %s/this.php on line 11
